<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Search</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for images</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="intro_text">Enter keywords above to search for images.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Advanced options</string>
    <string name="pref_imgsz">Image size</string>
    <string name="pref_imgcolor">Image color</string>
    <string name="pref_imgtype">Image type</string>
    <string name="pref_as_sitesearch">Site</string>
    <string name="bt_save">Save</string>
    <string name="sitefilter">Site filter</string>
    <string name="imgtype">Image Type</string>
    <string name="imgcolor">Color Filter</string>
    <string name="imgsize">Image Size</string>

    <string-array name="pref_image_colors">
        <item>all</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    
    <string-array name="pref_image_sizes">
        <item>all</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
    
    <string-array name="pref_image_types">
        <item>all</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
        <string name="share">Share</string>

</resources>