<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.imagesearch.SettingsActivity$PlaceholderFragment" >

    <Spinner
        android:id="@+id/spImgSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvImgSize"
        android:entries="@array/pref_image_sizes"
        android:gravity="right" />

    <TextView
        android:id="@+id/tvImgSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spImgSize"
        android:text="@string/imgsize" />

    <Spinner
        android:id="@+id/spImgColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spImgSize"
        android:layout_toRightOf="@+id/tvImgColor"
        android:entries="@array/pref_image_colors" />

    <TextView
        android:id="@+id/tvImgColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/spImgColor"
        android:text="@string/imgcolor" />

    <Spinner
        android:id="@+id/spImgType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spImgColor"
        android:layout_toRightOf="@+id/tvImgType"
        android:entries="@array/pref_image_types" />

    <TextView
        android:id="@+id/tvImgType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/spImgType"
        android:text="@string/imgtype" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/etSiteFilter"
        android:text="@string/sitefilter" />

    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spImgType"
        android:layout_toRightOf="@+id/tvSiteFilter"
        android:ems="10"
        android:inputType="textFilter" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSiteFilter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onClickSave"
        android:text="@string/bt_save" />

</RelativeLayout>